--- a/SharedQml/shared.qrc
+++ b/SharedQml/shared.qrc
@@ -9,6 +9,8 @@
         <file>images/00_info.svg</file>
         <file>images/00_menu_a.svg</file>
         <file>images/00_menu_b.svg</file>
+        <file>images/00_search_a.svg</file>
+        <file>images/00_search_b.svg</file>
         <file>images/00_song_art.svg</file>
         <file>images/00_song_play.svg</file>
         <file>images/00_song_pause.svg</file>
