--- a/SharedQml/shared.qrc
+++ b/SharedQml/shared.qrc
@@ -13,11 +13,11 @@
         <file>images/00_search_a.svg</file>
         <file>images/00_search_b.svg</file>
         <file>images/00_song_art.svg</file>
-        <file>images/00_song_play.svg</file>
-        <file>images/00_song_pause.svg</file>
-        <file>images/00_song_next.svg</file>
-        <file>images/00_song_prev.svg</file>
         <file>images/00_song_error_a.svg</file>
+        <file>images/00_song_next.svg</file>
+        <file>images/00_song_pause.svg</file>
+        <file>images/00_song_play.svg</file>
+        <file>images/00_song_prev.svg</file>
         <file>images/01_now_playing_a.svg</file>
         <file>images/02_playlist_a.svg</file>
         <file>images/02_playlist_b.svg</file>
@@ -29,32 +29,36 @@
         <file>images/05_ordered_list_a.svg</file>
         <file>images/06_settings_a.svg</file>
         <file>images/06_settings_b.svg</file>
+        <file>images/background.jpg</file>
+        <file>images/background2.jpg</file>
         <file>images/btn_back.png</file>
         <file>images/btn_next.png</file>
         <file>images/btn_up.png</file>
         <file>images/shadow_long.png</file>
         <file>images/shadow_title.png</file>
-        <file>images/background.jpg</file>
-        <file>images/background2.jpg</file>
+        <file>BasicTreeListDemo.qml</file>
+        <file>ExpanderButton.qml</file>
+        <file>LineInput.qml</file>
+        <file>ListItemDelegate.qml</file>
         <file>MainMenu.qml</file>
+        <file>MediaBar.qml</file>
+        <file>MediaBarBig.qml</file>
+        <file>MediaSeekButton.qml</file>
+        <file>MenuHeader.qml</file>
         <file>MenuIconLive.qml</file>
         <file>PageBase.qml</file>
+        <file>PageDynamicPlaylists.qml</file>
         <file>PageExplorer.qml</file>
         <file>PageLibrary.qml</file>
         <file>PageLibraryTree.qml</file>
+        <file>PageNowPlaying.qml</file>
+        <file>PagePlaylist.qml</file>
+        <file>PageReorderablePlayList.qml</file>
         <file>PageSettings.qml</file>
-        <file>BasicTreeListDemo.qml</file>
-        <file>ExpanderButton.qml</file>
-        <file>ListItemDelegate.qml</file>
+        <file>PlaylistItemDelegate.qml</file>
         <file>SimpleHeader.qml</file>
         <file>SimpleListDemo.qml</file>
         <file>SwipeListDelegate.qml</file>
-        <file>MenuHeader.qml</file>
-        <file>LineInput.qml</file>
-        <file>PagePlaylist.qml</file>
-        <file>MediaBar.qml</file>
         <file>SwipeListDemo.qml</file>
-        <file>PlaylistItemDelegate.qml</file>
-        <file>PageReorderablePlayList.qml</file>
     </qresource>
 </RCC>
