improve playlist page

--- a/SharedQml/shared.qrc
+++ b/SharedQml/shared.qrc
@@ -65,5 +65,6 @@
         <file>SwipeListDemo.qml</file>
         <file>IconButton.qml</file>
         <file>constants.js</file>
+        <file>PageReorderablePlayListOld.qml</file>
     </qresource>
 </RCC>
