implement new progress bar

--- a/YueWidgetTest/resource.qrc
+++ b/YueWidgetTest/resource.qrc
@@ -27,6 +27,7 @@
         <file>res/scan.svg</file>
         <file>res/search.svg</file>
         <file>res/select.svg</file>
+        <file>res/speech.svg</file>
         <file>res/settings.svg</file>
         <file>res/shuffle.svg</file>
         <file>res/sort.svg</file>
